# Project_Calculator

./: .gitignore  CMakeLists.txt  main.cpp
include/: Complex.h  Constant.h  Context.h  Exceptions.h  Expression.h  Logger.h  Operations.h  Parser.h  Variable.h
src/: Complex.cpp  Constant.cpp  Context.cpp  Operations.cpp  Variable.cpp
tests/: test_main.cpp
